@@ -4,6 +4,8 @@
   [Documentation]
   - Bumped copyright year.
 
+  - Added security policy.
+
 v1.2.3    2023-06-11 11:01:22+01:00 Europe/London
   [Documentation]
   - Document support policy for older Perl versions.
